<resources>
    <string name="app_name">Med App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth">Авторизация</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration"><u>Нет аккаунта? Зарегистрироваться</u></string>
    <string name="register">Регистрация</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="sing_up">Зарегистрироваться</string>
    <string name="text_login">Есть аккаунт? Войти</string>
    <string name="home">Главная</string>
    <string name="search_bd">Поиск по базе пациентов</string>
    <string name="fcs">Фамилия Имя Отчество</string>
    <string name="passport_series">Серия</string>
    <string name="passport_number">Номер</string>
    <string name="search">Поиск</string>
    <string name="diagnosis">Диагноз</string>
    <string name="date_birth">Дата рождения</string>
    <string name="date_analysis">Дата анализа</string>
    <string name="add_passient">Добавить пациента</string>
    <string name="text_add_patient">Добавление пациента</string>
    <string name="text_continue">Продолжить</string>
    <string name="text_info_about_patient">Информация о пациенте</string>
    <string name="text_name">Имя</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_patronymic">Отчество</string>
    <string name="hint_patronymic">Отчество/— </string>
    <string name="text_date_of_birth">Дата рождения</string>
    <string name="text_diagnosis">Диагноз</string>
    <string name="text_change_info">Изменить информацию</string>
    <string name="text_analyzes">Анализы</string>
    <string name="text_date_last_analysis">Дата последнего анализа</string>
    <string name="text_add_analyzes">Добавить анализы</string>
    <string name="text_save">Сохранить</string>
    <string name="text_add_analysis">Добавить анализ</string>
    <string name="text_hematological_status">Гематологическое исследование</string>
    <string name="text_indicator">Показатель</string>
    <string name="text_meaning">Значение</string>
    <string name="leukocyte">Лейкоциты (WBC)</string>
    <string name="_10e9">10E9/л</string>
    <string name="text_lymphocytes">Лимфоциты (LYMF)</string>
    <string name="percentage">%</string>
    <string name="text_monocytes">Моноциты (MON)</string>
    <string name="text_neutrophils">Нейтрофилы (NEU)</string>
    <string name="text_eosinophils">Эозинофилы (EOS)</string>
    <string name="text_basophils">Базофилы (BAS)</string>
    <string name="text_hemoglobin">Гемоглобин (HGB)</string>
    <string name="r">r/л</string>
    <string name="text_hematocrit">Гематокрит (HCT)</string>
    <string name="text_platelets">Тромбоциты (PLT)</string>
    <string name="text_erythrocyte">Эритроциты (RBC)</string>
    <string name="_10e12">10E12/л</string>
    <string name="mcv">Ср. объем эритрощита (MCV)</string>
    <string name="fl">фл</string>
    <string name="mch">Ср. сод. гед. в эритроците (MCH)</string>
    <string name="pg">пг</string>
    <string name="mchc">Ср. конц. гем. в эритроците (MCHC)</string>
    <string name="text_rdw_cv">Распр. эрит. по объему (RDW-CV)</string>
    <string name="text_mpv">Ср. объем тромбоцита (MPV)</string>
    <string name="text_pct">Тромбокрит (PCT)</string>
    <string name="text_pdv">Распр. тромб. по объему (PDV)</string>
    <string name="text_immune_status">Иммунный статус</string>
    <string name="text_detail_info">Подробная информация</string>
    <string name="text_more_detailed">Подробнее</string>
    <string name="text_recommendations">Рекомендации</string>
    <string name="text_desc_recomendation">на основе последнего анализа</string>
    <string name="text_analyzes_">Анализы</string>
    <string name="text_date_analyzes">Дата анализа</string>
    <string name="text_enter_data">Внести данные</string>
    <string name="cd45_cd3">Общие Т-лимфоциты (CD45+CD3+)</string>
    <string name="b_cd45_cd19">Общие B-лимфоциты (CD45+CD19+)</string>
    <string name="t_cd45_cd3_cd4">T-хелперы (CD45+CD3+CD4+)</string>
    <string name="t_cd45_cd3_cd8">T-цитотоксические лимфоциты (CD45+CD3+CD8+)</string>
    <string name="nk_cd45_cd3_cd16_56">Общие NK-клетки (CD45+CD3-CD16+56+)</string>
    <string name="nk_cd45_cd3_cd16brightcd56dim">NK-клетки цитолитические (CD45+CD3-CD16brightCD56dim)</string>
    <string name="nk_cd45_cd3_cd16dim_to_negcd56bright">NK-клетки цитокинпродуцирующие (CD45+CD3-CD16dim-to-negCD56bright)</string>
    <string name="tnk_cd45_cd3_cd16_cd56">TNK-клетки (CD45+CD3+CD16+CD56+)</string>
    <string name="t_cd45_cd3_hla_dr">Активированные T-клетки (CD45+CD3+HLA-DR+)</string>
    <string name="t_2_cd45_cd3_cd25">Активированные T-клетки, экспрессирующие а-цепь ИЛ-2 (CD45+CD3+CD25+)</string>
    <string name="iga">IgA</string>
    <string name="g_l">г/л</string>
    <string name="igg">IgG</string>
    <string name="igm">IgM</string>
    <string name="circulating_immune_complexes">Циркулирующие иммунные комплексы</string>
    <string name="ed">ед</string>
    <string name="hct">HCT-тест (спонтанный)</string>
    <string name="hct_test_stim">HCT-тест (стимулированный)</string>
    <string name="bactericidal_activity_leukocytes">Бактерицидная активность лейкоцитов</string>
    <string name="absorption_activity_neutrophils">Поглотительная активность нейтрофилов</string>
    <string name="absorption_activity_monocytes">Поглотительная активность моноцитов</string>
    <string name="cytokine_status">Цитокиновый статус</string>
    <string name="text_date_analysis">Дата выполнения анализа</string>
    <string name="_01_01_1990">01.01.1990</string>
    <string name="error_input">Данные не заполненны</string>
    <string name="text_cytokine_status">Цитокиновый статус</string>
    <string name="cd3_ifny">CD3+IFNy+(стимулированный)</string>
    <string name="cd3_ifny_">CD3+IFNy+(спонтанный)</string>
    <string name="cd3_tnfa">CD3+TNFa+(стимулированный)</string>
    <string name="cd3_tnfa_">CD3+TNFa+(спонтанный)</string>
    <string name="cd3_il2">CD3+IL2+(стимулированный)</string>
    <string name="cd3_il2_">CD3+IL2+(спонтанный)</string>
    <string name="cd3_il4">CD3+IL4+(стимулированный)</string>
    <string name="cd3_il4_">CD3+IL4+(спонтанный)</string>
    <string name="cd3_ifny__">CD3-IFNy+(стимулированный)</string>
    <string name="cd3_ifny___">CD3-IFNy+(спонтанный)</string>
    <string name="title_detail">Подробности</string>
    <string name="cd3_cd4_cd3_cd8">Соотношение CD3+CD4+/CD3+CD8+</string>
    <string name="text_view_charts">Посмотреть графики</string>
    <string name="chart">График T-cell</string>
    <string name="text_shape">Поделиться</string>
    <string name="text_edit">Редактировать</string>
    <string name="graphs">Графики</string>
    <string name="text_t_cell">T-клеточное звено иммунитета</string>
    <string name="text_b_cell">B-клеточное звено иммунитета</string>
</resources>