<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/input_background"
    tools:context=".presentation.GraphListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_chart"
            style="@style/ScreenHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/graphs" />

        <ImageView
            android:id="@+id/ic_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@drawable/ic_arrow" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/block_t_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_card"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_chart">


        <TextView
            android:id="@+id/tv_t_cell"
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/text_t_cell" />

        <ImageView
            android:id="@+id/imageView_t_cell"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_chart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/block_b_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/block_t_cell">


        <TextView
            android:id="@+id/tv_b_cell"
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/text_b_cell" />

        <ImageView
            android:id="@+id/imageView_b_cell"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/ic_chart" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>