<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_card"
    android:padding="16dp"
    android:layout_marginTop="8dp">

    <TextView
        android:id="@+id/title_status"
        style="@style/SectionHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        tools:text="@string/text_hematological_status"
        app:layout_constraintEnd_toStartOf="@+id/bt_arrow_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_arrow_status" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bt_arrow_status"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/bg_arrow_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ic_arrow_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/title_status"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_arrow_hematological_status"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/text_indicator"
                style="@style/InputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_indicator"
                android:textColor="@color/text_dark_primary" />

            <TextView
                android:id="@+id/tv_meaning"
                style="@style/InputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.2"
                android:gravity="center"
                android:text="@string/text_meaning"
                android:textColor="@color/text_dark_primary" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"
            tools:listitem="@layout/item_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_hematological_status" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>